# Spectrum

./: .gitignore  .kateproject.build  CMakeLists.txt  Spectrum.pro  Z80Interpreter.pro  array.h  computer.cpp  computer.h  cpu.cpp  cpu.h  evenparitytable16.inc  imagewidget.cpp  imagewidget.h  mainwindow.cpp  mainwindow.h  plain_opcode_cycles.txt  qspectrumdebugwindow.cpp  qspectrumdebugwindow.h  qspectrumdisplay.cpp  qspectrumdisplay.h  readme.md  spectrum.cpp  spectrum.h  spectrum.kdev4  spectrum_main.cpp  spectrumdisplaydevice.cpp  spectrumdisplaydevice.h  spectrumthread.cpp  spectrumthread.h  types.h  z80_dd_opcode_sizes.inc  z80_ed_opcode_cycles.inc  z80_ed_opcode_sizes.inc  z80_fd_opcode_sizes.inc  z80_opcodes_dd.h  z80_plain_opcode_cycles.inc  z80_plain_opcode_sizes.inc  z80interpreter.h
build_tools/: CMakeLists.template  create_cmakelists.sh  mocables.sh  package_source.sh  unmocables.sh
docs/: memptr.md
screens/: colour.scr
src/: application.cpp  application.h  computer.h  cpu.cpp  cpu.h  imagewidget.cpp  imagewidget.h  mainwindow.cpp  mainwindow.h  mappablememoryinterface.h  memory.cpp  (+23 more)
src/interpreter/: CMakeLists.txt  main.cpp  operand.cpp  operand.h  z80interpreter.cpp  z80interpreter.h
src/spectrum/: CMakeLists.txt  basespectrum.cpp  basespectrum.h  cursorjoystick.cpp  cursorjoystick.h  displaydevice.h  fullerjoystick.cpp  fullerjoystick.h  interfacetwojoystick.cpp  interfacetwojoystick.h  joystickinterface.cpp  joystickinterface.h  kempstonjoystick.cpp  kempstonjoystick.h  kempstonmouse.cpp  kempstonmouse.h  keyboard.cpp  keyboard.h  main.cpp  memory.cpp  memory.h  memory128k.cpp  memory128k.h  memoryplus2.h  memoryplus2a.cpp  memoryplus2a.h  memoryplus3.h  mouseinterface.cpp  mouseinterface.h  pagedmemoryinterface.h  pagingdevice128k.cpp  pagingdevice128k.h  pagingdeviceplus2a.cpp  pagingdeviceplus2a.h  pagingmemory.h  pagingmemoryinterface.h  pokedefinition.cpp  pokedefinition.h  pokfilereader.cpp  pokfilereader.h  (+48 more)
src/spectrum/debugger/: breakpoint.cpp  breakpoint.h  integermemorywatch.h  integermemorywatchbase.h  memorybreakpoint.cpp  memorybreakpoint.h  memorychangedbreakpoint.cpp  memorychangedbreakpoint.h  memorywatch.h  programcounterbreakpoint.cpp  programcounterbreakpoint.h  registerbreakpoint.h  registervaluebreakpoint.cpp  registervaluebreakpoint.h  stackpointerbelowbreakpoint.cpp  stackpointerbelowbreakpoint.h  stringmemorywatch.cpp  stringmemorywatch.h
src/spectrum/io/: pokfilereader.cpp  pokfilereader.h  snapshotformatguesser.h  snapshotformatmatcher.h  snapshotreader.cpp  snapshotreader.h  snapshotreaderfactory.h  snapshotwriter.cpp  snapshotwriter.h  snapshotwriterclass.h  snapshotwriterfactory.h  snasnapshotreader.cpp  snasnapshotreader.h  snasnapshotwriter.cpp  snasnapshotwriter.h  spsnapshotreader.cpp  spsnapshotreader.h  spsnapshotwriter.cpp  spsnapshotwriter.h  tapereader.cpp  tapereader.h  taptapereader.cpp  taptapereader.h  z80snapshotreader.cpp  z80snapshotreader.h  z80snapshotwriter.cpp  z80snapshotwriter.h  zx82snapshotreader.cpp  zx82snapshotreader.h  zx82snapshotwriter.cpp  zx82snapshotwriter.h  zxsnapshotreader.cpp  zxsnapshotreader.h  zxsnapshotwriter.cpp  zxsnapshotwriter.h
src/spectrum/qt/: application.cpp  application.h  breakpoint.cpp  breakpoint.h  custompokewidget.cpp  custompokewidget.h  debugwindow.cpp  debugwindow.h  disassemblywidget.cpp  disassemblywidget.h  flagswidget.cpp  flagswidget.h  hexspinbox.cpp  imagewidget.cpp  imagewidget.h  interruptwidget.cpp  interruptwidget.h  keyboard.cpp  keyboard.h  keyboardmonitorwidget.cpp  keyboardmonitorwidget.h  mainwindow.cpp  mainwindow.h  memorydebugwidget.cpp  memorydebugwidget.h  memoryview.cpp  memoryview.h  memorywidget.cpp  memorywidget.h  pokeswidget.cpp  pokeswidget.h  pokewidget.cpp  pokewidget.h  programcounterbreakpoint.cpp  programcounterbreakpoint.h  programpointerswidget.cpp  programpointerswidget.h  qimagedisplaydevice.cpp  qimagedisplaydevice.h  qinterfacetwojoystick.cpp  (+14 more)
src/spectrum/qtui/: aboutwidget.cpp  aboutwidget.h  actionableitemview.h  actionbar.cpp  actionbar.h  application.cpp  application.h  breakpoint.cpp  breakpoint.h  bytechangedbreakpoint.cpp  bytechangedbreakpoint.h  cheatsview.cpp  cheatsview.h  cheatsviewitem.cpp  cheatsviewitem.h  custompokewidget.cpp  custompokewidget.h  debugwindow.cpp  debugwindow.h  dialogue.cpp  dialogue.h  disassemblywidget.cpp  disassemblywidget.h  flagswidget.cpp  flagswidget.h  gamecontrollerhandler.cpp  gamecontrollerhandler.h  help-en.md  help.qrc  helpwidget.cpp  helpwidget.h  hexspinbox.h  hexspinboxdelegate.cpp  hexspinboxdelegate.h  icons.qrc  imagewidget.cpp  imagewidget.h  interruptwidget.cpp  interruptwidget.h  keyboardmonitorwidget.cpp  (+55 more)
src/spectrum/qtui/debugger/: breakpointscontextmenu.cpp  breakpointscontextmenu.h  breakpointsmodel.cpp  breakpointsmodel.h  breakpointsview.cpp  breakpointsview.h  debugwindow.cpp  debugwindow.h  disassemblywidget.cpp  disassemblywidget.h  flagswidget.cpp  flagswidget.h  interruptwidget.cpp  interruptwidget.h  keyboardmonitorwidget.cpp  keyboardmonitorwidget.h  memorycontextmenu.cpp  memorycontextmenu.h  memorysearchwidget.cpp  memorysearchwidget.h  memorywatchesmodel.cpp  memorywatchesmodel.h  memorywidget.cpp  memorywidget.h  programpointerswidget.cpp  programpointerswidget.h  registerswidget.cpp  registerswidget.h  shadowregisterswidget.cpp  shadowregisterswidget.h  watchescontextmenu.cpp  watchescontextmenu.h  watchesmodel.cpp  watchesmodel.h  watchesview.cpp  watchesview.h
src/spectrum/screenview/: CMakeLists.txt  application.cpp  application.h  colourcombo.cpp  colourcombo.h  main.cpp  mainwindow.cpp  mainwindow.h
src/spectrum/sdl/: sdlspectrumkeyboard.cpp  sdlspectrumkeyboard.h
src/test/z80/: CMakeLists.txt  event.h  expectation.cpp  expectation.h  expectationfilereader.cpp  expectationfilereader.h  filereader.cpp  filereader.h  main.cpp  memory.h  memoryblock.h  runner.cpp  runner.h  state.h  test.cpp  test.h  testbattery.cpp  testbattery.h  testfilereader.cpp  testfilereader.h  testiodevice.h
src/test/z80/assembly/: CMakeLists.txt  disassembler.cpp
(+91 files in other folders)
